[package]
name = "grimnir"
version = "0.1.0"
edition = "2021"
description = "A Rust-based cybersecurity tool blending fuzzing (like ffuf) and HTTP probing (like httpx) with AI enhancements."
authors = ["RowanDark <tehrowandark@gmail.com>"]
license = "MIT"
repository = "https://github.com/rowandark/grimnir"

[dependencies]
clap = { version = "4.0", features = ["derive"] }  # For CLI parsing
reqwest = { version = "0.11", features = ["blocking", "socks"] }  # For HTTP requests with proxy support
tokio = { version = "1", features = ["full"] }  # For async concurrency
serde = { version = "1.0", features = ["derive"] }  # For JSON handling
serde_json = "1.0"  # For JSON output
regex = "1"  # For parsing and filtering
rust-bert = "0.22"  # For NLP models (e.g., sentiment)
tch = "0.14"  # Torch backend for rust-bert
lazy_static = "1.4"  # For static regexes in tech_fingerprinter
chrono = "0.4"  # For timestamped file outputs
